# QtCipherSqlitePlugin

./: CMakeLists.txt
sqlitecipher/: CMakeLists.txt  sqlitecipher.cpp
sqlitecipher/sqlite3/: CMakeLists.txt
test/: CMakeLists.txt
testapp/: CMakeLists.txt
